--- a/style.css
+++ b/style.css
@@ -24,7 +24,6 @@ html {
   letter-spacing: 0.5rem;
   text-shadow: 0.3rem 0.3rem 0.3rem #000;
 }
-
 /* End of Common Styles */
 
 /* Section 1 */
@@ -49,9 +48,8 @@ html {
 
 .section-1-icons i.change {
   transform: translate(-50%, -50%) scale(1);
-  transition: transform 0.3s 0.3s;
+  transition: transform 0.3s 0.3s ease-in;
 }
-
 /* End of Section 1 */
 
 /* Section */
@@ -81,7 +79,7 @@ html {
   box-shadow: 1rem 1rem 1rem #000;
   position: relative;
   transform: rotateY(20deg) skewX(-2deg);
-  transition: transform 0.5s, box-shadow 0.5s;
+  transition: transform 0.5s, box-shadow 0.5s ease-in;
 }
 
 .card:hover {
@@ -173,7 +171,7 @@ html {
   height: 0;
   background-color: #fff;
   z-index: 10;
-  transition: height 0.5s;
+  transition: height 0.5s ease-in;
 }
 
 .gallery-link::after {
@@ -184,7 +182,7 @@ html {
   width: 0;
   height: 0.2rem;
   background-color: #fff;
-  transition: width 0.5s;
+  transition: width 0.5s ease-in;
 }
 
 .gallery-link:hover::before {
@@ -224,12 +222,12 @@ html {
   color: #fff;
   width: 0;
   overflow: hidden;
-  transition: width 0.3s;
+  transition: width 0.3s ease-in;
 }
 
 .gallery-link:hover .food-name {
   width: 100%;
-  transition: width 1.5s 0.5s;
+  transition: width 1.5s 0.5s ease-in;
 }
 
 .food-description {
@@ -244,13 +242,86 @@ html {
   color: #fff;
   opacity: 0;
   visibility: hidden;
-  transition: opacity 0.3s;
+  transition: opacity 0.3s ease-in;
 }
 
 .gallery-link:hover .food-description {
   opacity: 1;
   visibility: visible;
-  transition: opacity 1s 1s;
+  transition: opacity 1s 1s ease-in;
+}
+/* End of Section 3 */
+
+/* Section 4 */
+.section-4 {
+  width: 100%;
+  height: 30vh;
+  background-color: #222;
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-start;
+  padding: 3rem 0;
+  position: relative;
 }
 
-/* End of Section 3 */
+.section-4-text {
+  text-transform: uppercase;
+}
+
+.section-4-heading {
+  font-size: 4rem;
+  font-weight: 900;
+  color: #a79a2d;
+}
+
+.section-4-paragraph {
+  font-size: 1.5rem;
+  color: #888;
+}
+
+.signup-form {
+  display: flex;
+  align-items: center;
+}
+
+.signup-form-input {
+  width: 35rem;
+  height: 5rem;
+  padding: 1rem;
+  border: 0.2rem solid #a79a2d;
+  font-size: 1.6rem;
+  font-weight: 700;
+  letter-spacing: 0.1rem;
+  color: #a79a2d;
+}
+
+.signup-form-input::placeholder {
+  color: #a79a2d;
+}
+
+.signup-form-btn {
+  position: relative;
+  left: -4.5rem;
+  width: 4rem;
+  height: 4rem;
+  background-color: #333;
+  color: #a79a2d;
+  border: none;
+  font-size: 1.8rem;
+  cursor: pointer;
+}
+
+.copyright {
+  position: absolute;
+  bottom: 3rem;
+  font-size: 1.7rem;
+  font-weight: 200;
+  color: #eee;
+  letter-spacing: 0.1rem;
+  border-top: 0.1rem solid #888;
+  padding-top: 6rem;
+  width: 100%;
+  text-align: center;
+}
+
+/* End of Section 4 */
