--- a/style.css
+++ b/style.css
@@ -38,12 +38,12 @@ html {
   justify-content: center;
   align-items: center;
   box-shadow: 0.2rem 0.2rem 0.2rem #000;
-  transition: top 0.4s ease-in;
+  transition: top 0.4s;
 }
 
 .navbar.change {
   top: 0;
-  transition: top 0.4s 0.2s ease-in;
+  transition: top 0.4s 0.2s;
 }
 
 .navbar-link {
@@ -54,7 +54,7 @@ html {
   justify-content: center;
   align-items: center;
   opacity: 0;
-  transition: color 0.3s ease-in, opacity 0.2s ease-in;
+  transition: color 0.3s, opacity 0.2s;
 }
 
 .change .navbar-link {
@@ -106,12 +106,13 @@ html {
   border-radius: 30rem 30rem 15rem 15rem;
   box-shadow: 0.1rem 0.1rem 0.1rem #000, -0.1rem -0.1rem 0.1rem #000;
   cursor: pointer;
-  transition: top 0.4s 0.2s ease-in;
+  z-index: 100;
+  transition: top 0.4s 0.2s;
 }
 
 .menu.change {
   top: 15rem;
-  transition: 0.4s ease-in;
+  transition: 0.4s;
 }
 
 .menu::before {
@@ -148,7 +149,7 @@ html {
 
 .section-1-icons i.change {
   transform: translate(-50%, -50%) scale(1);
-  transition: transform 0.3s 0.3s ease-in;
+  transition: transform 0.3s 0.3s;
 }
 /* End of Section 1 */
 
@@ -179,7 +180,7 @@ html {
   box-shadow: 1rem 1rem 1rem #000;
   position: relative;
   transform: rotateY(20deg) skewX(-2deg);
-  transition: transform 0.5s, box-shadow 0.5s ease-in;
+  transition: transform 0.5s, box-shadow 0.5s;
 }
 
 .card:hover {
@@ -271,7 +272,7 @@ html {
   height: 0;
   background-color: #fff;
   z-index: 10;
-  transition: height 0.5s ease-in;
+  transition: height 0.5s;
 }
 
 .gallery-link::after {
@@ -282,7 +283,7 @@ html {
   width: 0;
   height: 0.2rem;
   background-color: #fff;
-  transition: width 0.5s ease-in;
+  transition: width 0.5s;
 }
 
 .gallery-link:hover::before {
@@ -299,7 +300,7 @@ html {
   object-fit: cover;
   box-shadow: 0.3rem 0.3rem 0.1rem #e92929, 0.5rem 0.5rem 0.1rem #a2e946,
     0.7rem 0.7rem 0.1rem #297ce9, 0.9rem 0.9rem 0.1rem #e92999;
-  transition: all 0.5s ease-in;
+  transition: all 0.5s;
   border-radius: 1rem;
 }
 
@@ -322,12 +323,12 @@ html {
   color: #fff;
   width: 0;
   overflow: hidden;
-  transition: width 0.3s ease-in;
+  transition: width 0.3s;
 }
 
 .gallery-link:hover .food-name {
   width: 100%;
-  transition: width 1.5s 0.5s ease-in;
+  transition: width 1.5s 0.5s;
 }
 
 .food-description {
@@ -342,13 +343,13 @@ html {
   color: #fff;
   opacity: 0;
   visibility: hidden;
-  transition: opacity 0.3s ease-in;
+  transition: opacity 0.3s;
 }
 
 .gallery-link:hover .food-description {
   opacity: 1;
   visibility: visible;
-  transition: opacity 1s 1s ease-in;
+  transition: opacity 1s 1s;
 }
 /* End of Section 3 */
 
@@ -423,5 +424,105 @@ html {
   width: 100%;
   text-align: center;
 }
-
 /* End of Section 4 */
+
+/* Responsive */
+@media (max-width: 1400px) {
+  html {
+    font-size: 50%;
+  }
+
+  .section-2 {
+    height: auto;
+    padding: 10rem 0 12rem 0;
+  }
+
+  .cards-container {
+    margin-top: 10rem;
+  }
+
+  .gallery-link {
+    width: 40rem;
+    height: 25rem;
+    margin: 5rem;
+  }
+
+  .food-img {
+    width: 100%;
+    height: 100%;
+  }
+}
+
+@media (max-width: 1000px) {
+  .section-heading {
+    font-size: 9rem;
+    margin: 0 5rem;
+  }
+
+  .section-1-icons {
+    font-size: 25rem;
+  }
+
+  .cards-container {
+    flex-wrap: wrap;
+  }
+
+  .card {
+    margin: 5rem;
+  }
+
+  .section-4 {
+    height: 30rem;
+  }
+}
+
+@media (max-width: 900px) {
+  .navbar-link {
+    margin: 2rem;
+  }
+
+  .navbar-link i {
+    font-size: 4rem;
+  }
+
+  .navbar-link span {
+    font-size: 2rem;
+  }
+}
+
+@media (max-width: 700px) {
+  .section-heading {
+    font-size: 7rem;
+    margin: 0 10rem;
+  }
+
+  .section-1-icons i {
+    font-size: 20rem;
+  }
+
+  .menu {
+    left: 2rem;
+  }
+
+  .section-4 {
+    height: 40rem;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+  }
+
+  .section-4-text {
+    margin-bottom: 8rem;
+  }
+}
+
+@media (max-width: 550px) {
+  html {
+    font-size: 40%;
+  }
+
+  .navbar-link {
+    margin: 0 0.7rem;
+  }
+}
+/* End of Responsive */
